# EquiHGNN

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup_env.sh  train_opv.py  train_opv_old.py  train_qm9.py
common/: registry.py
configs/: egnn_equihnns.yaml  ehgnn.yaml  equiformer_equihnns.yaml  se3_transformer_equihnns.yaml
data/: __init__.py  opv.py  opv3d.py  qm9.py  utils.py
docs/: Notes.md
equihgnn/common/: registry.py
equihgnn/data/: __init__.py  molecule3d.py  opv3d.py  pcqm4.py  qm9.py  utils.py
equihgnn/models/: __init__.py  baseline_2d.py  conv.py  equihnn.py  equihnn_egnn.py  equihnn_equiformer.py  equihnn_fa_former.py  equihnn_se3_transformer.py  equihnn_visnet.py  mhnn.py
equihgnn/models/layers/: conv.py  egnn_layer.py  equiformer_layer.py  fa_former_layer.py  mlp.py  se3_transformer_layer.py  visnet_layer.py
equihgnn/models/layers/equiformer/: basis.py  equiformer_README.md  irr_repr.py  reversible.py  utils.py
equihgnn/scripts/: train.py
equihgnn/utils/: __init__.py  config.py  create.py  data_split.py
models/: __init__.py  baseline_2d.py  egnn.py  equihnn.py  equihnn_egnn.py  mghnn.py  mhnn.py
notebooks/: eda_opv.ipynb
scripts/: run_molecule.sh  run_molecule_3d.sh  run_opv.sh  run_opv_3d.sh  run_pcqm.sh  run_pcqm_3d.sh  run_qm9.sh  run_qm9_3d.sh
tests/: run_molecule.sh  run_molecule_3d.sh  run_opv.sh  run_opv_3d.sh  run_pcqm.sh  run_pcqm_3d.sh  run_qm9.sh  run_qm9_3d.sh
utils/: __init__.py  create.py  data_split.py
(+7 files in other folders)
