[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equihgnn"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
authors = [{name = "hysonlab"}]

[tool.setuptools.packages.find]
exclude = ["*.yaml", "*.yml", "test*", "storage*", "scripts*", "docs*", "datasets*"]